[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-comment-explorer"
version = "0.2.0"
description = "Unified tool for scraping YouTube channel videos metadata and comments without the YouTube API."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests", "pyyaml"]

[project.optional-dependencies]
# Install with: pip install -e ".[ai]"
ai = ["openai>=1.0.0"]
# Install with: pip install -e ".[parquet]"
parquet = ["pandas>=2.0.0", "pyarrow>=10.0.0"]

[project.scripts]
ytce = "ytce.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
